:dragon: Fixed spacing for header and nav and footer stuff. Changed bg-image and how the spacing adapts to resolution.

--- a/_scss/_config.scss
+++ b/_scss/_config.scss
@@ -48,6 +48,12 @@ $space-quadruple: $space * 4;
 $space-quintuple: $space * 5;
 $space-sextuple: $space * 6;
 $space-septuple: $space * 7;
+$space-octuple: $space * 8;
+$space-nonuple: $space * 9;
+$space-decuple: $space * 10;
+$space-uncuple: $space * 11;
+$space-duodecuple: $space * 12;
+$space-tredecuple: $space * 13;
 
 $space-one-half: $space/2;
 $space-one-third: $space/3;
