--- a/_scss/partials/_archive_page.scss
+++ b/_scss/partials/_archive_page.scss
@@ -40,6 +40,7 @@
 .browse-by-category {
   @extend %clearfix;  
   float:right;
+  width:100%;
   
   ul {
     padding:$space-one-half;
