--- a/css/style.css
+++ b/css/style.css
@@ -357,21 +357,31 @@ h5 {
   background-color: rgba(255, 255, 255, 0.8);
 }
 .wrap.header {
-  padding: 20px 40px 100px;
+  padding: 20px;
+}
+@media (min-width: 37.5em) {
+  .wrap.header {
+    padding: 20px 40px 100px;
+  }
 }
 @media (min-width: 59.4375em) {
   .wrap.header {
-    padding-bottom: 100px;
+    padding-bottom: 140px;
+  }
+}
+@media (min-width: 80em) {
+  .wrap.header {
+    padding-bottom: 180px;
   }
 }
 @media (min-width: 100em) {
   .wrap.header {
-    padding-bottom: 120px;
+    padding-bottom: 220px;
   }
 }
 @media (min-width: 120em) {
   .wrap.header {
-    padding-bottom: 140px;
+    padding-bottom: 260px;
   }
 }
 
@@ -384,11 +394,17 @@ h5 {
   }
 }
 .site-header .logo-wrap {
-  width: 31.91489%;
-  float: left;
-  margin-right: -100%;
-  margin-left: 0;
-  clear: none;
+  text-align: center;
+}
+@media (min-width: 30.625em) {
+  .site-header .logo-wrap {
+    width: 31.91489%;
+    float: left;
+    margin-right: -100%;
+    margin-left: 0;
+    clear: none;
+    text-align: left;
+  }
 }
 .site-header .logo {
   fill: white;
@@ -405,11 +421,17 @@ h5 {
   height: auto;
 }
 .site-header .site-nav {
-  width: 65.95745%;
-  float: right;
-  margin-left: 0;
-  margin-right: 0;
-  clear: none;
+  padding-top: 20px;
+}
+@media (min-width: 30.625em) {
+  .site-header .site-nav {
+    width: 65.95745%;
+    float: right;
+    margin-left: 0;
+    margin-right: 0;
+    clear: none;
+    padding: 0;
+  }
 }
 .site-header .site-nav a {
   color: white;
@@ -422,8 +444,12 @@ h5 {
 .site-header .site-nav .menu {
   margin: 0;
   padding: 0;
-  float: right;
-  text-align: right;
+  text-align: center;
+}
+@media (min-width: 30.625em) {
+  .site-header .site-nav .menu {
+    float: right;
+  }
 }
 .site-header .site-nav .menu li {
   list-style-type: none;
@@ -560,72 +586,43 @@ input[type="submit"].active {
   }
 }
 
-@media (min-width: 59.4375em) {
-  .footer-col-1 {
-    padding-bottom: 1em;
-  }
+.footer-col-1 {
+  padding-bottom: 6.66667px;
 }
 @media (min-width: 100em) {
   .footer-col-1 {
     width: 48.93617%;
-    clear: right;
     float: left;
+    margin-right: -100%;
     margin-left: 0;
-    margin-right: 2.12766%;
-  }
-}
-@media (min-width: 120em) {
-  .footer-col-1 {
-    width: 40.42553%;
-    clear: right;
-    float: left;
-    margin-left: 0;
-    margin-right: 2.12766%;
-  }
-}
-@media (min-width: 143.75em) {
-  .footer-col-1 {
-    width: 31.91489%;
-    clear: right;
-    float: left;
-    margin-left: 0;
-    margin-right: 2.12766%;
+    clear: none;
+    padding-bottom: none;
   }
 }
 
-@media (min-width: 59.4375em) {
-  .footer-col-2 {
-    border-top: 1px solid #4d6736;
-    padding-top: 2em;
-  }
+.footer-col-2 {
+  border-top: 2px solid #4d6736;
+  padding-top: 20px;
 }
 @media (min-width: 100em) {
   .footer-col-2 {
     width: 48.93617%;
-    clear: right;
     float: right;
+    margin-left: 0;
     margin-right: 0;
-  }
-}
-@media (min-width: 120em) {
-  .footer-col-2 {
-    width: 57.44681%;
-    clear: right;
-    float: right;
-    margin-right: 0;
-  }
-}
-@media (min-width: 143.75em) {
-  .footer-col-2 {
-    width: 65.95745%;
-    clear: right;
-    float: right;
-    margin-right: 0;
+    clear: none;
+    border-top: none;
+    padding-top: 0;
   }
 }
 
 .site-footer ul {
   list-style: none;
+}
+@media (min-width: 100em) {
+  .site-footer ul {
+    float: right;
+  }
 }
 .site-footer ul li {
   display: inline-block;
@@ -634,9 +631,8 @@ input[type="submit"].active {
   margin: 0 6.66667px 4px;
 }
 .site-footer ul li a {
-  display: block;
+  display: inline-block;
   background-color: rgba(255, 255, 255, 0.8);
-  float: left;
   padding: .5em;
   border-radius: 20px;
 }
@@ -1394,6 +1390,7 @@ body.dessa .site-nav a:hover {
 
 .browse-by-category {
   float: right;
+  width: 100%;
 }
 .browse-by-category ul {
   padding: 10px;
